# autodegen

./: .gitignore  LEADERBOARD.md  README.md  STRESS_REPORT_stress-test-1.md  TODO.md  config.md  degen.md  leaderboard.tsv  prepare.py  program.md  pyproject.toml  strategy.py  strategy_scout1_1773519318.py  strategy_scout1_1773519411.py  strategy_scout1_1773519480.py  strategy_scout1_1773519583.py  strategy_scout1_1773519620.py  strategy_scout1_1773519653.py  strategy_scout2_1773520738.py  strategy_scout3_ema21_1773521935.py  swarm.sh
.pi/agents/: asymmetry-scout.md  bottleneck.md  breakout-scout.md  critic.md  executor.md  exhaustion-scout.md  historian.md  meanrev-scout.md  (+5 more)
autodegen/: config.py
docs/: EVAL-FRAMEWORK-SPEC.md  PRD.md  SYSTEM-DESIGN.md
roles/: explorer.md  optimizer.md  stress-tester.md  synthesizer.md
strategies/: autodegen-scout-1_1773528476.py  autodegen-scout-1_1773531073.py  autodegen-scout-1_1773532256.py  autodegen-scout-2_1773528476.py  autodegen-scout-2_1773532256.py  autodegen-scout-3_1773528476.py  autodegen-scout-3_1773531073.py  autodegen-scout-3_1773532256.py  autodegen-scout-4_1773528477.py  autodegen-scout-4_1773531073.py  autodegen-scout-4_1773532256.py  autodegen-scout-5_1773528477.py  autodegen-scout-5_1773531073.py  explorer-1_1773575759.py  explorer-2_1773575760.py  optimizer-1_1773575764.py  optimizer-2_1773580180.py  synthesizer-1_1773575780.py  synthesizer-2_1773580185.py
tests/: conftest.py  test_backtest.py  test_bar.py  test_config.py  test_data_quality.py  test_ingest.py  test_prepare.py  test_strategy.py
(+8 files in other folders)
