[project]
name = "autodegen"
version = "0.1.0"
description = "Autonomous trading strategy research loop"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "polars>=1.8.0",
  "ccxt>=4.4.0",
  "numpy>=2.1.0",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
